<resources>
    <string name="app_name">ResidentBeacon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_residents">Residents</string>
    <string name="menu_programs">Programs</string>
    <string name="login">Login</string>
    <string name="resident_beacon">Resident Beacon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="remember_me">Remember Me</string>
    <string name="search">Search</string>
    <string name="program_name">Programs</string>
    <string name="location">Location</string>
    <string name="speciality">Speciality</string>
    <string name="title_activity_flash">FlashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Resident">Resident</string>
    <array name="status">
        <item>All</item>
        <item>Active</item>
        <item>Inactive</item>
    </array>

</resources>